button spinners done

--- a/index.html
+++ b/index.html
@@ -1171,15 +1171,10 @@
             <button type="submit" id="profileButton"
               class="btn   bg-primary mt-5 font-medium text-white hover:bg-primary-focus focus:bg-primary-focus active:bg-primary-focus/90 dark:bg-accent dark:hover:bg-accent-focus dark:focus:bg-accent-focus dark:active:bg-accent/90">
               <span id="buttonTextProfile" class="" data-translation="form.button">Update</span>
-              <span id="spinnerForm" class="hidden animate-spin">&#x21BB;</span>
+              <span id="spinnerForm" class="hidden spinner h-5 w-5 animate-spin rounded-full border-[3px] border-primary/30 border-r-primary dark:border-accent/30 dark:border-r-accent"></span>                                        </button>
+
             </button>
-
-          </form>
-
-
-
-
-
+         </form>
         </div>
       </div>
     </div>
